ecmascript/parser/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates14_ES5/input.ts.stderr
error[1125]: Expected a hexadecimal digit
 --> $DIR/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates14_ES5/input.ts:4:13
  |
4 | var x = `\u{-DDDD}`;
  |             ^

error[1198]: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
 --> $DIR/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates14_ES5/input.ts:4:13
  |
4 | var x = `\u{-DDDD}`;
  |             ^^^^^

